Update with bigquery instuctions

--- a/reddit_user_word_complexity_2d.ipynb
+++ b/reddit_user_word_complexity_2d.ipynb
@@ -17,25 +17,46 @@
         "id": "0"
       },
       "source": [
-        "## Reddit user × word data: 2D “fitness / complexity” analysis\n",
+        "## Reddit user × word data: “fitness / complexity” analysis\n",
         "\n",
         "This notebook:\n",
         "\n",
-        "- Downloads a **sample of Reddit users** from BigQuery and aggregates their comments into per-user text.\n",
-        "- Builds a **user × word matrix** and its **support** (analogous to country × product).\n",
-        "- Implements the paper’s **vector Fitness / vector Complexity** extension (rank-2 association) in the form\n",
-        "  \\(\\mu_{uw}=M_{uw}\\exp(\\widetilde F_u^\\top\\widetilde Q_w)\\).\n",
-        "\n",
-        "### Interpretation (mapping to economic fitness)\n",
-        "\n",
-        "- **Users** ↔ countries\n",
-        "- **Words** ↔ products\n",
-        "- **User uses word** ↔ support edge\n",
-        "\n",
-        "### What “2D” means\n",
-        "\n",
-        "The extension adds 2 latent coordinates per user/word (rank-2 association). The *augmented* vectors \\(\\widetilde F,\\widetilde Q\\) live in \\(\\mathbb{R}^{2+2}\\), because they include the diagonal scalings as coordinates too.\n"
+        "- Downloads a sample of Reddit users from BigQuery and aggregates their comments into per-user text.\n",
+        "- Builds a `user` $\\times$ `word` matrix and its *support* (analogous to `country` $\\times$ `product`).\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0d66ba0d"
+      },
+      "source": [
+        "### BigQuery Setup Instructions\n",
+        "\n",
+        "To run the BigQuery query cells in this notebook, you need to have a Google Cloud Project with the BigQuery API enabled and proper authentication setup.\n",
+        "\n",
+        "Here's a general guide:\n",
+        "\n",
+        "1.  **Google Cloud Account**: If you don't have one, sign up for a Google Cloud account. You might be eligible for a free trial.\n",
+        "    *   [Sign up for Google Cloud](https://cloud.google.com/free)\n",
+        "\n",
+        "2.  **Create/Select a Project**: In the [Google Cloud Console](https://console.cloud.google.com/), create a new project or select an existing one.\n",
+        "    *   Ensure that **billing is enabled** for your project, as BigQuery usage incurs costs (though often minimal for small queries, especially with the free tier).\n",
+        "\n",
+        "3.  **Enable the BigQuery API**: For your selected project, ensure the BigQuery API is enabled.\n",
+        "    *   Go to the [API Library](https://console.cloud.google.com/apis/library) in the Cloud Console.\n",
+        "    *   Search for \"BigQuery API\" and enable it if it's not already enabled.\n",
+        "\n",
+        "4.  **Authenticate Colab**: In your Colab environment, the `google.colab.auth.authenticate_user()` function (called in Cell 3) will handle the authentication process by prompting you to log in with your Google account. This provides the necessary credentials for BigQuery access.\n",
+        "\n",
+        "    Alternatively, if you are working locally or need specific application-default credentials, you might use the `gcloud` CLI:\n",
+        "    ```bash\n",
+        "    gcloud auth application-default login\n",
+        "    ```\n",
+        "\n",
+        "Once these steps are complete, you should be able to run the BigQuery cells successfully!"
+      ],
+      "id": "0d66ba0d"
     },
     {
       "cell_type": "markdown",
