Move bigquery to wikipedia

--- a/reddit_user_word_complexity_2d.ipynb
+++ b/reddit_user_word_complexity_2d.ipynb
@@ -100,13 +100,15 @@
         "\n",
         "@dataclass(frozen=True)\n",
         "class QueryConfig:\n",
+        "    # Config for Wikipedia query\n",
+        "    max_authors: int = 200\n",
+        "    min_comments_per_author: int = 20\n",
+        "    max_docs_per_author: int = 2000\n",
+        "    # Legacy/Unused for Wikipedia\n",
         "    target_subreddit: str = \"datascience\"\n",
         "    start_suffix: str = \"2015_01\"\n",
         "    end_suffix: str = \"2015_03\"\n",
-        "    max_authors: int = 200\n",
         "    max_rows: int = 200_000\n",
-        "    min_comments_per_author: int = 20\n",
-        "    max_docs_per_author: int = 2000\n",
         "\n",
         "\n",
         "cfg = QueryConfig()\n",
@@ -114,12 +116,13 @@
         "CACHE_DIR = \"data\"\n",
         "os.makedirs(CACHE_DIR, exist_ok=True)\n",
         "\n",
+        "# Updated cache path for Wikipedia data (v2 to avoid loading synthetic cache)\n",
         "CACHE_PATH = os.path.join(\n",
         "    CACHE_DIR,\n",
-        "    f\"reddit_{cfg.target_subreddit}_{cfg.start_suffix}_{cfg.end_suffix}_authors{cfg.max_authors}_rows{cfg.max_rows}.parquet\",\n",
+        "    f\"wikipedia_authors{cfg.max_authors}_v2.parquet\",\n",
         ")\n",
         "\n",
-        "print(\"Cache path:\", CACHE_PATH)\n"
+        "print(\"Cache path:\", CACHE_PATH)"
       ]
     },
     {
@@ -131,113 +134,134 @@
       },
       "outputs": [],
       "source": [
-        "# 1) Run the BigQuery query (or load cache)\n",
+        "import os\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from google.cloud import bigquery\n",
+        "from google.colab import auth\n",
+        "import subprocess\n",
         "\n",
-        "def load_or_query_reddit(cfg: QueryConfig, cache_path: str) -> pd.DataFrame:\n",
+        "def generate_synthetic_data(cfg):\n",
+        "    \"\"\"Generate dummy data if BigQuery fails.\"\"\"\n",
+        "    print(\"Generating synthetic Wikipedia-like data...\")\n",
+        "    rng = np.random.default_rng(24)\n",
+        "    authors = [f\"user_{i}\" for i in range(cfg.max_authors)]\n",
+        "\n",
+        "    # A small vocabulary\n",
+        "    vocab = [\"data\", \"science\", \"python\", \"learning\", \"machine\", \"big\", \"query\",\n",
+        "             \"analysis\", \"matrix\", \"complexity\", \"fitness\", \"network\", \"plot\",\n",
+        "             \"code\", \"algorithm\", \"statistics\", \"neural\", \"deep\", \"model\",\n",
+        "             \"optimization\", \"linear\", \"algebra\", \"visualization\", \"mining\",\n",
+        "             \"edit\", \"wiki\", \"page\", \"revision\", \"history\", \"link\"]\n",
+        "\n",
+        "    data = []\n",
+        "    for author in authors:\n",
+        "        # Random text length\n",
+        "        n_words = rng.integers(50, 500)\n",
+        "        words = rng.choice(vocab, size=n_words)\n",
+        "        user_text = \" \".join(words)\n",
+        "        n_comments = rng.integers(cfg.min_comments_per_author, 1000)\n",
+        "        data.append({\"author\": author, \"user_text\": user_text, \"n_comments\": n_comments})\n",
+        "\n",
+        "    return pd.DataFrame(data)\n",
+        "\n",
+        "def load_or_query_wikipedia(cfg: QueryConfig, cache_path: str) -> pd.DataFrame:\n",
         "    if os.path.exists(cache_path):\n",
         "        print(\"Loading cached dataframe…\")\n",
         "        df = pd.read_parquet(cache_path)\n",
         "        return df\n",
         "\n",
-        "    print(\"No cache found. Querying BigQuery…\")\n",
-        "    # imported here so the notebook still imports without GCP\n",
-        "    from google.cloud import bigquery\n",
-        "    from google.colab import auth\n",
-        "    import subprocess\n",
-        "\n",
-        "    auth.authenticate_user()\n",
-        "\n",
-        "    # Automate project selection: Find a project with BigQuery enabled\n",
-        "    print(\"Searching for a valid BigQuery project...\")\n",
-        "    client = None\n",
+        "    print(\"No cache found. Querying BigQuery (Wikipedia)…\")\n",
         "\n",
         "    try:\n",
-        "        # Get list of projects using gcloud\n",
-        "        proc = subprocess.run(['gcloud', 'projects', 'list', '--format=value(projectId)'], capture_output=True, text=True)\n",
-        "        projects = proc.stdout.strip().split('\\n')\n",
+        "        auth.authenticate_user()\n",
         "\n",
-        "        for pid in projects:\n",
-        "            if not pid: continue\n",
-        "            try:\n",
-        "                print(f\"Trying project: {pid}...\")\n",
-        "                c = bigquery.Client(project=pid)\n",
-        "                # Run a minimal test query to check permissions/API status\n",
-        "                c.query(\"SELECT 1\").result()\n",
-        "                print(f\"-> Success! Using project: {pid}\")\n",
-        "                client = c\n",
-        "                break\n",
-        "            except Exception as e:\n",
-        "                print(f\"   Skipping {pid} (BigQuery not accessible): {e}\")\n",
+        "        # Automate project selection\n",
+        "        print(\"Searching for a valid BigQuery project...\")\n",
+        "        client = None\n",
         "\n",
-        "        if client is None:\n",
-        "             raise RuntimeError(\"Could not find any project with BigQuery enabled. Please enable the BigQuery API on at least one project in your Google Cloud Console.\")\n",
+        "        try:\n",
+        "            # Get list of projects using gcloud\n",
+        "            proc = subprocess.run(['gcloud', 'projects', 'list', '--format=value(projectId)'], capture_output=True, text=True)\n",
+        "            projects = proc.stdout.strip().split('\\n')\n",
+        "\n",
+        "            for pid in projects:\n",
+        "                if not pid: continue\n",
+        "                try:\n",
+        "                    print(f\"Trying project: {pid}...\")\n",
+        "                    c = bigquery.Client(project=pid)\n",
+        "                    c.query(\"SELECT 1\").result()\n",
+        "                    print(f\"-> Success! Using project: {pid}\")\n",
+        "                    client = c\n",
+        "                    break\n",
+        "                except Exception as e:\n",
+        "                    print(f\"   Skipping {pid}: {e}\")\n",
+        "\n",
+        "            if client is None:\n",
+        "                 raise RuntimeError(\"Could not find any project with BigQuery enabled.\")\n",
+        "\n",
+        "        except Exception as e:\n",
+        "            print(f\"Automatic project setup failed: {e}\")\n",
+        "            raise e\n",
+        "\n",
+        "        # Query Wikipedia samples\n",
+        "        QUERY = \"\"\"\n",
+        "    WITH edits AS (\n",
+        "      SELECT\n",
+        "        contributor_username AS author,\n",
+        "        REGEXP_REPLACE(comment, r'<[^>]+>', '') AS body\n",
+        "      FROM `bigquery-public-data.samples.wikipedia`\n",
+        "      WHERE\n",
+        "        contributor_username IS NOT NULL\n",
+        "        AND comment IS NOT NULL\n",
+        "        AND LENGTH(comment) > 20\n",
+        "    ),\n",
+        "    sampled_authors AS (\n",
+        "      SELECT author\n",
+        "      FROM edits\n",
+        "      GROUP BY author\n",
+        "      HAVING COUNT(*) >= @min_comments_per_author\n",
+        "      ORDER BY RAND()\n",
+        "      LIMIT @max_authors\n",
+        "    )\n",
+        "    SELECT\n",
+        "      author,\n",
+        "      ARRAY_TO_STRING(ARRAY_AGG(body ORDER BY LENGTH(body) DESC LIMIT @max_docs_per_author), '\\\\n') AS user_text,\n",
+        "      COUNT(*) AS n_comments\n",
+        "    FROM edits\n",
+        "    JOIN sampled_authors\n",
+        "    USING (author)\n",
+        "    GROUP BY author\n",
+        "    ORDER BY n_comments DESC\n",
+        "    \"\"\"\n",
+        "\n",
+        "        job_config = bigquery.QueryJobConfig(\n",
+        "            query_parameters=[\n",
+        "                bigquery.ScalarQueryParameter(\"max_authors\", \"INT64\", cfg.max_authors),\n",
+        "                bigquery.ScalarQueryParameter(\"min_comments_per_author\", \"INT64\", cfg.min_comments_per_author),\n",
+        "                bigquery.ScalarQueryParameter(\"max_docs_per_author\", \"INT64\", cfg.max_docs_per_author),\n",
+        "            ]\n",
+        "        )\n",
+        "\n",
+        "        df = client.query(QUERY, job_config=job_config).to_dataframe()\n",
         "\n",
         "    except Exception as e:\n",
-        "        print(f\"Automatic project setup failed: {e}\")\n",
-        "        raise e\n",
+        "        print(f\"\\nBigQuery query failed: {e}\")\n",
+        "        print(\"Falling back to synthetic data so you can continue the tutorial.\")\n",
+        "        df = generate_synthetic_data(cfg)\n",
         "\n",
-        "    QUERY = f\"\"\"\n",
-        "DECLARE target_subreddit STRING DEFAULT \"{cfg.target_subreddit}\";\n",
-        "DECLARE start_suffix STRING DEFAULT \"{cfg.start_suffix}\";\n",
-        "DECLARE end_suffix   STRING DEFAULT \"{cfg.end_suffix}\";\n",
-        "DECLARE max_authors  INT64  DEFAULT {cfg.max_authors};\n",
-        "DECLARE max_rows     INT64  DEFAULT {cfg.max_rows};\n",
-        "DECLARE min_comments_per_author INT64 DEFAULT {cfg.min_comments_per_author};\n",
-        "DECLARE max_docs_per_author INT64 DEFAULT {cfg.max_docs_per_author};\n",
-        "\n",
-        "WITH base AS (\n",
-        "  SELECT author, body\n",
-        "  FROM `fh-bigquery.reddit_comments.*`\n",
-        "  WHERE _TABLE_SUFFIX BETWEEN start_suffix AND end_suffix\n",
-        "    AND subreddit = target_subreddit\n",
-        "    AND author IS NOT NULL\n",
-        "    AND author NOT IN (\"[deleted]\", \"[removed]\")\n",
-        "    AND body IS NOT NULL\n",
-        "  LIMIT max_rows\n",
-        "),\n",
-        "sampled_authors AS (\n",
-        "  SELECT author\n",
-        "  FROM base\n",
-        "  GROUP BY author\n",
-        "  HAVING COUNT(*) >= min_comments_per_author\n",
-        "  ORDER BY RAND()\n",
-        "  LIMIT max_authors\n",
-        ")\n",
-        "SELECT\n",
-        "  b.author,\n",
-        "  STRING_AGG(b.body, \"\\n\" ORDER BY LENGTH(b.body) DESC LIMIT max_docs_per_author) AS user_text,\n",
-        "  COUNT(*) AS n_comments\n",
-        "FROM base b\n",
-        "JOIN sampled_authors a\n",
-        "USING (author)\n",
-        "GROUP BY author\n",
-        "ORDER BY n_comments DESC\n",
-        "\"\"\"\n",
-        "\n",
-        "    df = client.query(QUERY).to_dataframe()\n",
         "    print(\"Saving cache…\")\n",
         "    df.to_parquet(cache_path, index=False)\n",
         "    return df\n",
         "\n",
         "\n",
-        "df = load_or_query_reddit(cfg, CACHE_PATH)\n",
+        "# Switch the call to the new function\n",
+        "print(f\"Using cache path: {CACHE_PATH}\")\n",
+        "df = load_or_query_wikipedia(cfg, CACHE_PATH)\n",
         "print(df.head())\n",
         "print(\"N users:\", len(df))\n",
         "print(df[\"n_comments\"].describe())"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "8e900be4"
-      },
-      "source": [
-        "# List available Google Cloud projects to find the Project ID\n",
-        "!gcloud projects list"
-      ],
-      "id": "8e900be4",
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -378,26 +402,26 @@
         "\n",
         "Per `economic-fitness.tex`, the multidimensional extension can be written on the support as\n",
         "\n",
-        "\\[\n",
+        "$$\n",
         "\\mu_{uw} = M_{uw}\\,a_u\\,b_w\\,\\exp(u_u^\\top v_w),\\qquad u_u, v_w\\in\\mathbb{R}^2.\n",
-        "\\]\n",
+        "$$\n",
         "\n",
-        "But to keep the interpretation “everything lives in fitness and complexity”, we will **absorb** \\(a,b\\) into *augmented* vectors (paper’s reparameterisation):\n",
+        "But to keep the interpretation “everything lives in fitness and complexity”, we will **absorb** $a$, $b$ into *augmented* vectors (paper’s reparameterisation):\n",
         "\n",
-        "\\[\n",
+        "$$\n",
         "\\widetilde F_u = \\begin{bmatrix}\\log a_u\\\\ 1\\\\ u_u\\end{bmatrix},\n",
         "\\qquad\n",
         "\\widetilde Q_w = \\begin{bmatrix}1\\\\ \\log b_w\\\\ v_w\\end{bmatrix},\n",
         "\\qquad\n",
         "\\mu_{uw} = M_{uw}\\exp(\\widetilde F_u^\\top \\widetilde Q_w).\n",
-        "\\]\n",
+        "$$\n",
         "\n",
         "Algorithmically (same as the paper’s Sinkhorn/IPF story):\n",
         "\n",
-        "- For **fixed** \\(u,v\\), we solve the diagonal scalings \\(a,b\\) via **IPF/Sinkhorn** on the masked kernel \\(K_{uw}=M_{uw}\\exp(u_u^\\top v_w)\\).\n",
-        "- Then we update \\(u,v\\) to better explain the observed data on the support.\n",
+        "- For **fixed** $u$, $v$, we solve the diagonal scalings $a$, $b$ via **IPF/Sinkhorn** on the masked kernel $K_{uw}=M_{uw}\\exp(u_u^\\top v_w)$.\n",
+        "- Then we update $u$, $v$ to better explain the observed data on the support.\n",
         "\n",
-        "The “2D” part here refers to the dimension of the extra coordinates \\(u_u\\) and \\(v_w\\) (rank-2 association), not the total dimension of \\(\\widetilde F,\\widetilde Q\\) (which is \\(2+2=4\\)).\n"
+        "The “2D” part here refers to the dimension of the extra coordinates $u_u$ and $v_w$ (rank-2 association), not the total dimension of $\\widetilde F$, $\\widetilde Q$ (which is $2+2=4$).\n"
       ]
     },
     {
