Edits to increase users

--- a/reddit_user_word_complexity_2d.ipynb
+++ b/reddit_user_word_complexity_2d.ipynb
@@ -83,7 +83,8 @@
       "source": [
         "# Core\n",
         "import os\n",
-        "from dataclasses import dataclass\n",
+        "from dataclasses import dataclass, field\n",
+        "from typing import Tuple\n",
         "\n",
         "import numpy as np\n",
         "import pandas as pd\n",
@@ -101,9 +102,12 @@
         "@dataclass(frozen=True)\n",
         "class QueryConfig:\n",
         "    # Config for Wikipedia query\n",
-        "    max_authors: int = 200\n",
+        "    max_authors: int = 1000\n",
         "    min_comments_per_author: int = 20\n",
         "    max_docs_per_author: int = 2000\n",
+        "    # Optional: List of specific users to prioritize/include if they meet criteria\n",
+        "    specific_users: Tuple[str] = field(default_factory=tuple)\n",
+        "\n",
         "    # Legacy/Unused for Wikipedia\n",
         "    target_subreddit: str = \"datascience\"\n",
         "    start_suffix: str = \"2015_01\"\n",
@@ -111,15 +115,16 @@
         "    max_rows: int = 200_000\n",
         "\n",
         "\n",
+        "# Standard random sampling (no specific users)\n",
         "cfg = QueryConfig()\n",
         "\n",
         "CACHE_DIR = \"data\"\n",
         "os.makedirs(CACHE_DIR, exist_ok=True)\n",
         "\n",
-        "# Updated cache path for Wikipedia data (v2 to avoid loading synthetic cache)\n",
+        "# Updated cache path for Wikipedia data (v4 - random sample)\n",
         "CACHE_PATH = os.path.join(\n",
         "    CACHE_DIR,\n",
-        "    f\"wikipedia_authors{cfg.max_authors}_v2.parquet\",\n",
+        "    f\"wikipedia_authors{cfg.max_authors}_v4.parquet\",\n",
         ")\n",
         "\n",
         "print(\"Cache path:\", CACHE_PATH)"
@@ -205,20 +210,27 @@
         "            raise e\n",
         "\n",
         "        # Query Wikipedia samples\n",
+        "        # Clean comments: remove /* Section */ markers and HTML tags\n",
+        "        # Filter out bots: exclude usernames ending in \"bot\"\n",
         "        QUERY = \"\"\"\n",
         "    WITH edits AS (\n",
         "      SELECT\n",
         "        contributor_username AS author,\n",
-        "        REGEXP_REPLACE(comment, r'<[^>]+>', '') AS body\n",
+        "        REGEXP_REPLACE(comment, r'/\\\\*.*?\\\\*/|<[^>]+>', '') AS body\n",
         "      FROM `bigquery-public-data.samples.wikipedia`\n",
         "      WHERE\n",
         "        contributor_username IS NOT NULL\n",
         "        AND comment IS NOT NULL\n",
-        "        AND LENGTH(comment) > 20\n",
+        "        AND NOT REGEXP_CONTAINS(LOWER(contributor_username), r'bot$')\n",
+        "    ),\n",
+        "    valid_edits AS (\n",
+        "      SELECT author, body\n",
+        "      FROM edits\n",
+        "      WHERE LENGTH(TRIM(body)) > 10  -- Filter out empty or very short comments after cleaning\n",
         "    ),\n",
         "    sampled_authors AS (\n",
         "      SELECT author\n",
-        "      FROM edits\n",
+        "      FROM valid_edits\n",
         "      GROUP BY author\n",
         "      HAVING COUNT(*) >= @min_comments_per_author\n",
         "      ORDER BY RAND()\n",
@@ -228,7 +240,7 @@
         "      author,\n",
         "      ARRAY_TO_STRING(ARRAY_AGG(body ORDER BY LENGTH(body) DESC LIMIT @max_docs_per_author), '\\\\n') AS user_text,\n",
         "      COUNT(*) AS n_comments\n",
-        "    FROM edits\n",
+        "    FROM valid_edits\n",
         "    JOIN sampled_authors\n",
         "    USING (author)\n",
         "    GROUP BY author\n",
@@ -255,8 +267,9 @@
         "    return df\n",
         "\n",
         "\n",
-        "# Switch the call to the new function\n",
+        "# Force a new cache path to ensure we query real data\n",
         "print(f\"Using cache path: {CACHE_PATH}\")\n",
+        "\n",
         "df = load_or_query_wikipedia(cfg, CACHE_PATH)\n",
         "print(df.head())\n",
         "print(\"N users:\", len(df))\n",
@@ -288,13 +301,14 @@
         "    binary=BINARY,\n",
         ")\n",
         "\n",
+        "# df is loaded from the previous cell\n",
         "X = vectorizer.fit_transform(df[\"user_text\"].fillna(\"\"))\n",
         "X = X.astype(np.float64)\n",
         "\n",
         "vocab = vectorizer.get_feature_names_out()\n",
         "user_ids = df[\"author\"].astype(str).tolist()\n",
         "\n",
-        "print(\"Users:\", X.shape[0], \"Vocab:\", X.shape[1], \"binary:\", BINARY)\n",
+        "print(f\"Raw Matrix -> Users: {X.shape[0]}, Vocab: {X.shape[1]}, binary: {BINARY}\")\n",
         "\n",
         "# Support mask (structural zeros off-support)\n",
         "M = X.copy()\n",
@@ -323,7 +337,7 @@
         "user_strength = np.asarray(X.sum(axis=1)).ravel()\n",
         "word_strength = np.asarray(X.sum(axis=0)).ravel()\n",
         "\n",
-        "print(\"After filtering -> Users:\", X.shape[0], \"Vocab:\", X.shape[1])\n"
+        "print(f\"After filtering -> Users: {X.shape[0]}, Vocab: {X.shape[1]}\")"
       ]
     },
     {
@@ -387,9 +401,23 @@
         "word_scores_1d = pd.Series(Q1, index=vocab).sort_values(ascending=False)\n",
         "user_scores_1d = pd.Series(F1, index=user_ids).sort_values(ascending=False)\n",
         "\n",
-        "print(\"Top 15 words by 1D complexity:\")\n",
-        "print(word_scores_1d.head(15))\n"
+        "print(\"Top 20 words by complexity:\")\n",
+        "print(word_scores_1d.head(20))\n",
+        "print(\"Top 20 users by fitness:\")\n",
+        "print(user_scores_1d.head(20))"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "user_scores_1d.head(15)"
+      ],
+      "metadata": {
+        "id": "eQrn6EVFIHZ4"
+      },
+      "id": "eQrn6EVFIHZ4",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -632,21 +660,29 @@
       "outputs": [],
       "source": [
         "# Plot word embedding (dim1, dim2)\n",
-        "\n",
-        "plt.figure(figsize=(9, 7))\n",
-        "plt.scatter(word_xy[\"dim1\"], word_xy[\"dim2\"], s=10, alpha=0.4)\n",
+        "plt.figure(figsize=(10, 8))\n",
+        "plt.scatter(word_xy[\"dim1\"], word_xy[\"dim2\"], s=20, alpha=0.6, edgecolors='none', c='teal')\n",
         "plt.axhline(0, color=\"black\", linewidth=0.5)\n",
         "plt.axvline(0, color=\"black\", linewidth=0.5)\n",
-        "plt.title(f\"Word embedding from rank-2 Pietronero extension (margins=uniform, binary={BINARY})\")\n",
-        "plt.xlabel(\"dim1\")\n",
-        "plt.ylabel(\"dim2\")\n",
+        "plt.title(f\"Wikipedia Word Complexity Space (Rank-2 Model)\")\n",
+        "plt.xlabel(\"Latent Dimension 1\")\n",
+        "plt.ylabel(\"Latent Dimension 2\")\n",
         "\n",
-        "# Label a few most complex words\n",
-        "top = word_xy.sort_values(\"complexity_2d\", ascending=False).head(20)\n",
-        "for w, row in top.iterrows():\n",
-        "    plt.text(row[\"dim1\"], row[\"dim2\"], w, fontsize=8)\n",
+        "# Label the most complex words (high norm)\n",
+        "top_words = word_xy.sort_values(\"complexity_2d\", ascending=False).head(25)\n",
+        "for w, row in top_words.iterrows():\n",
+        "    plt.text(row[\"dim1\"] * 1.05, row[\"dim2\"] * 1.05, w, fontsize=9, alpha=0.9)\n",
         "\n",
-        "plt.show()\n"
+        "plt.grid(True, alpha=0.3)\n",
+        "plt.show()\n",
+        "\n",
+        "# --- Analyze Editors (Users) ---\n",
+        "# U2 contains the user coordinates (n_users x 2)\n",
+        "user_xy = pd.DataFrame(U2, index=user_ids, columns=[\"dim1\", \"dim2\"])\n",
+        "user_xy[\"fitness_2d\"] = np.linalg.norm(U2, axis=1)\n",
+        "\n",
+        "print(\"\\nTop 15 Most 'Fit' Wikipedia Editors (by 2D model norm):\")\n",
+        "print(user_xy.sort_values(\"fitness_2d\", ascending=False).head(15))"
       ]
     },
     {
